im having an issue getting the modal to align when i target the form using appsignup, will need to fix this tomorrow, but lots of progress

--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,19 @@
   margin:0;
 }
 
-.app{
+.app {
 background-color: #fafafa;
 height:100vh;
 }
 
-.app__header{
+.app__header {
   object-fit:contain; /*This makes it such that the instagram logo keeps its aspect ratio*/
   background-color: white;
   padding:20px; /*This adds pading to the header so its not resting right at the top of the page*/
   border-bottom: 1px solid lightgray;/*adds a solid light gray line to seperate the header from the body*/
+}
+
+.app__signup {
+  flex-direction: row;
 }
 
